log
Thu 21 Mar 2024 04:03:24 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
dfc4013
Thu 21 Mar 2024 04:07:57 PM UTC: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:9: error: ‘L’ redeclared as different kind of symbol
   63 |   List* L = create_list();
      |         ^
exercises.c:60:21: note: previous definition of ‘L’ with type ‘List *’
   60 | int sumaLista(List *L)
      |               ~~~~~~^
Compilation failed
ca08336
Thu 21 Mar 2024 04:08:05 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
e070988
Thu 21 Mar 2024 04:08:42 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:8: error: unused variable ‘lista’ [-Werror=unused-variable]
   63 |   int *lista;
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b5583ac
Thu 21 Mar 2024 04:12:52 PM UTC: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:22: error: implicit declaration of function ‘len’ [-Werror=implicit-function-declaration]
   63 |   for(int i = 0; i < len(L); i++)
      |                      ^~~
exercises.c:65:22: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   65 |       suma += *(int*)get(L, i);
      |                      ^~~
      |                      getw
exercises.c:65:16: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   65 |       suma += *(int*)get(L, i);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
1a9beed
Thu 21 Mar 2024 04:12:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:22: error: implicit declaration of function ‘len’ [-Werror=implicit-function-declaration]
   63 |   for(int i = 0; i < len(L); i++)
      |                      ^~~
exercises.c:65:27: error: passing argument 1 of ‘getw’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   65 |       suma += *(int*)getw(L, i);
      |                           ^
      |                           |
      |                           List *
In file included from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdio.h:581:24: note: expected ‘FILE *’ but argument is of type ‘List *’
  581 | extern int getw (FILE *__stream);
      |                  ~~~~~~^~~~~~~~
In file included from test.c:5:
exercises.c:65:22: error: too many arguments to function ‘getw’
   65 |       suma += *(int*)getw(L, i);
      |                      ^~~~
In file included from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdio.h:581:12: note: declared here
  581 | extern int getw (FILE *__stream);
      |            ^~~~
In file included from test.c:5:
exercises.c:65:16: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   65 |       suma += *(int*)getw(L, i);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
732529f
Thu 21 Mar 2024 04:15:11 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:22: error: implicit declaration of function ‘len’ [-Werror=implicit-function-declaration]
   63 |   for(int i = 0; i < len(L); i++)
      |                      ^~~
cc1: all warnings being treated as errors
Compilation failed
5488dc0
Thu 21 Mar 2024 04:15:52 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:22: error: implicit declaration of function ‘len’ [-Werror=implicit-function-declaration]
   63 |   for(int i = 0; i < len(L); i++)
      |                      ^~~
cc1: all warnings being treated as errors
Compilation failed
1dc4866
Thu 21 Mar 2024 04:21:21 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:22: error: implicit declaration of function ‘len’ [-Werror=implicit-function-declaration]
   64 |   for(int i = 0; i < len(L); i++)
      |                      ^~~
exercises.c:63:7: error: unused variable ‘longitud’ [-Werror=unused-variable]
   63 |   int longitud = get_size(L);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
564625b
Thu 21 Mar 2024 04:21:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c66d001
Thu 21 Mar 2024 04:23:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
06e14d8
Thu 21 Mar 2024 04:28:10 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
5123b19
Thu 21 Mar 2024 04:30:44 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
f4bbae1
Thu 21 Mar 2024 06:51:49 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:12: error: invalid use of undefined type ‘struct List’
   89 |       if (L[i]== elem)
      |            ^
exercises.c:89:11: error: invalid use of incomplete typedef ‘List’
   89 |       if (L[i]== elem)
      |           ^
Compilation failed
b72ac48
Thu 21 Mar 2024 06:54:19 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
5f1f00d
Thu 21 Mar 2024 06:55:29 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
80bd672
